--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <link href="/static/css/main.0a2c3c0f.chunk.css" rel="stylesheet">
         </head>
         <body>
-            <noscript>You need to enable JavaScript to run this app.</noscript>
+            <noscript>You need to enable JavaScript to run this application.</noscript>
             <div id="root">
             </div>
             <div id="modal">
